# StormByte-Database

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql.yml  doc.yml  jekyll-gh-pages.yml
cmake/: FindMariaDBConnector.cmake  asan.cmake  install.cmake
doc/: CMakeLists.txt
lib/: CMakeLists.txt
lib/database/: database.hxx  preparedSTMT.hxx  row.hxx  visibility.h
lib/database/sqlite/: exception.cxx  exception.hxx  preparedSTMT.cxx  preparedSTMT.hxx  query.cxx  sqlite3.hxx
lib/optional/StormByte/database/mariadb/: mariadb.cxx  mariadb.hxx  prepared_stmt.cxx  prepared_stmt.hxx
lib/optional/StormByte/database/postgres/: postgres.cxx  postgres.hxx  prepared_stmt.cxx  prepared_stmt.hxx
lib/optional/StormByte/database/sqlite/: alias.hxx  exception.cxx  exception.hxx  preparedSTMT.cxx  preparedSTMT.hxx  prepared_stmt.cxx  prepared_stmt.hxx  query.cxx  query.hxx  sqlite3.cxx  sqlite3.hxx  type.hxx
lib/optional/database/sqlite/: preparedSTMT.cxx  preparedSTMT.hxx  query.hxx  sqlite3.cxx  type.hxx
lib/private/StormByte/database/mariadb/: result_fetch.hxx
lib/private/StormByte/database/postgres/: result_fetch.hxx
lib/private/StormByte/database/sqlite/: result_fetch.hxx
lib/public/StormByte/database/: database.cxx  database.hxx  exception.cxx  exception.hxx  named_value.hxx  preparedSTMT.hxx  prepared_stmt.hxx  query.hxx  row.cxx  row.hxx  rows.cxx  rows.hxx  typedefs.hxx  value.hxx  visibility.h
lib/public/database/: exception.cxx  exception.hxx  preparedSTMT.hxx  query.hxx
test/: CMakeLists.txt  dummy_test.cxx  mariadb_test.cxx  postgres_test.cxx  sqlite_test.cxx
test/files/: test.db
