option(ENABLE_TEST "Enable Unit Tests" OFF)
if(ENABLE_TEST AND NOT STORMBYTE_AS_DEPENDENCY)
	enable_testing()

	add_executable(DummyTests dummy_test.cxx)
	target_link_libraries(DummyTests StormByte::Database)
	add_test(NAME DummyTests COMMAND DummyTests)
	
	if (NOT WITH_SQLITE STREQUAL "OFF")
		add_executable(SQLiteTests sqlite_test.cxx)
		target_link_libraries(SQLiteTests StormByte::Database)
		add_test(NAME SQLiteTests COMMAND SQLiteTests)
	endif()

	if (NOT WITH_POSTGRES STREQUAL "OFF")
		add_executable(PostgresTests postgres_test.cxx)
		target_link_libraries(PostgresTests StormByte::Database)
		add_test(NAME PostgresTests COMMAND PostgresTests)
	endif()

	if (NOT WITH_MARIADB STREQUAL "OFF")
		add_executable(MariaDBTests mariadb_test.cxx)
		target_link_libraries(MariaDBTests StormByte::Database)
		add_test(NAME MariaDBTests COMMAND MariaDBTests)
	endif()
endif()